--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,11 @@
 @import 'libs/bootstrap-reboot.min';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 
-* {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-}
+@import "base/variables";
+@import "base/mixins";
+@import "global";
+@import "blocks/title";
+@import "blocks/link";
+@import "blocks/promo";
+@import "blocks/social-links";
+@import "media/media-hover";
