--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,4 +8,6 @@
 @import "blocks/link";
 @import "blocks/promo";
 @import "blocks/social-links";
+@import "blocks/burger";
+@import "blocks/menu";
 @import "media/media-hover";
