--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -4,8 +4,14 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -100%;
     z-index: 10;
+    transition: all .6s;
+    transition-timing-function: ease-in;
+    &.active {
+        left: 0;
+        transition-timing-function: initial;
+    }
     &__content {
         width: 345px;
         height: 100%;
@@ -18,13 +24,22 @@
         position: absolute;
         top: 25px;
         right: 25px;
+        cursor: pointer;
     } 
     &__items {
         list-style: none;
     }
     &__item {
         margin-bottom: 15px;
+    }
+    &__link {
+        display: block;
+        padding-left: 35px;
+        font-size: 24px;
+        font-weight: 700;
         position: relative;
+        color: #fff;
+        overflow: hidden;
         &:before {
             content: "";
             width: 15px;
@@ -34,13 +49,19 @@
             position: absolute;
             top:11px;
             left: 0;
+            transition: all .2s;
         }
-    }
-    &__link {
-        padding-left: 35px;
-        font-size: 24px;
-        font-weight: 700;
-        color: #fff;
+        &:after {
+            content: "";
+            display: block;
+            width: 0;
+            height: 2px;
+            background-color: #fff; 
+            position: absolute;
+            left: 35px;
+            bottom: 5px;
+            transition: .3s all;
+        }
     }
     &__social {
         display: flex;
@@ -55,6 +76,15 @@
     &__overlay {
         width: 100%;
         height: 100vh;
-        background-color: rgba(255, 255, 255, 0.75);
+        background-color: #fff;
+        transition: all .5s .3s;
+        opacity: 0;
+        transition-duration: .1s;
+        transition-delay: 0s;
+        &.active {
+            transition: all .3s .5s;
+            opacity: .75;
+        }
+        
     }
 }
