--- a/src/sass/media/_media-hover.scss
+++ b/src/sass/media/_media-hover.scss
@@ -25,4 +25,31 @@
             background-color: $main-color;
         }
     }
+    .menu {
+        &__close {
+            transition: all .4s;
+            &:hover {
+                padding-top: 5px;
+            }
+        }
+        &__link {
+            &:hover {
+                color: #fff;
+                text-decoration: none;
+                &::before {
+                    background-color: #fff;
+                    // border-color: #fff;
+                }
+                &::after {
+                    width: calc(100% - 85px);
+                }
+            }
+        }
+        &__social-link {
+            transition: all .2s;
+            &:hover {
+                transform: translateY(-3px);
+            }
+        }
+    }
 }
