--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,4 +10,5 @@
 @import "blocks/social-links";
 @import "blocks/burger";
 @import "blocks/menu";
+@import "blocks/about";
 @import "media/media-hover";
