--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -1,4 +1,7 @@
 @mixin before-circle {
+    padding-left: 12px;
+    position: relative;
+    z-index: 1;
     &::before {
         content: "";
         width: 36px;
@@ -9,5 +12,44 @@
         left: 0;
         top: -6px;
         z-index: -1;
+    }
+}
+
+@mixin before-circle-item {
+    padding-left: 60px;
+    position: relative;
+    z-index: 2;
+    &::before {
+        content: "";
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        background-color: $main-color;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: -1;
+    }
+    &::after {
+        content: "";
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        left: 16px;
+        top: 15px;
+        z-index: -1;
+    }
+}
+
+@mixin divider {
+    position: relative;
+    &::after {
+        content: "";
+        width: 60px;
+        height: 3px;
+        background-color: $main-color;
+        position: absolute;
+        left: 0;
+        bottom: -5px;
     }
 }
