--- a/src/sass/media/_media-hover.scss
+++ b/src/sass/media/_media-hover.scss
@@ -52,4 +52,11 @@
             }
         }
     }
+    .portfolio {
+        &__item {
+            &:hover .portfolio__img {
+                transform: scale(1.2);
+            }
+        }
+    }
 }
