--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,8 @@
 @import "blocks/about";
 @import "blocks/exp";
 @import "blocks/skills";
+@import "blocks/portfolio";
+@import "blocks/price";
+@import "blocks/contacts";
+@import "blocks/privacy";
 @import "media/media-hover";
