--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,5 @@
 @import "blocks/price";
 @import "blocks/contacts";
 @import "blocks/privacy";
+@import "media/media";
 @import "media/media-hover";
