--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -14,9 +14,30 @@
     .container {
         padding: 0 10px;
     }
+
+    .about {
+        &__info {
+            grid-template-columns: repeat(2,minmax(auto, 260px));
+            column-gap: 30px;
+            row-gap: 25px;
+        }
+    }
 }
 
 @media (max-width: 992px) {
+    .about {
+        padding-top: 60px;
+        &__wrap {
+            grid-template-columns: 350px 1fr;
+            column-gap: 20px;
+        }
+        &__info {
+            grid-template-columns: 1fr;
+        }
+        &__subtitle {
+            font-size: 30px;
+        }
+    }
 
 }
 
@@ -30,6 +51,18 @@
             font-size: 36px;
             max-width: 450px;
             line-height: 43px;
+        }
+    }
+
+    .about {
+        padding-top: 40px;
+        &__wrap {
+            grid-template-columns: 1fr;
+            column-gap: none;
+            row-gap: 20px;
+        }
+        &__picture {
+            justify-self: center;
         }
     }
 }
@@ -46,6 +79,22 @@
         &__content {
             flex-basis: 250px;
             padding-left: 20px;
+        }
+    }
+
+    .about {
+        &__wrap {
+            grid-template-rows: 340px auto;
+        }
+        &__picture {
+            justify-self: unset;
+        }
+        &__img {
+            width: 100%;
+            height: 100%;
+        }
+        &__subtitle {
+            font-size: 24px;
         }
     }
 }
