--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -38,6 +38,19 @@
             justify-content: center;
         }
     }
+
+    .portfolio {
+        &__wrap {
+            grid-template-columns: repeat(auto-fit, 280px);
+            justify-content: center;
+        }
+        &__item {
+            &_vertical, &_horizontal {
+                grid-column: unset;
+                grid-row: unset;
+            }
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -77,6 +90,26 @@
         }
         &__wrap {
             margin-bottom: 80px;
+        }
+    }
+
+    .portfolio {
+        padding-top: 60px;
+        &__subtitle {
+            font-size: 30px;
+            margin-bottom: 55px;
+        }
+    }
+
+    .price {
+        padding-top: 60px;
+        &__title {
+            margin-bottom: 60px;
+        }
+        &__wrap {
+            grid-template-columns: repeat(2, minmax(auto, 370px));
+            column-gap: 15px;
+            padding: 0;
         }
     }
 }
@@ -121,6 +154,12 @@
             grid-template-columns: repeat(auto-fill, minmax(auto, 250px));
             justify-content: space-around;
             column-gap: 30px;
+        }
+    }
+
+    .price {
+        &__wrap {
+            grid-template-columns: 50%;
         }
     }
 }
