--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -10,7 +10,7 @@
     &__img {
         display: block;
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
     }
     &__title {
@@ -41,7 +41,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 45px 190px;
-        grid-auto-rows: 45px;
+        grid-auto-rows: auto;
         column-gap: 25px;
         row-gap: 28px;
     }
