--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -51,6 +51,19 @@
             }
         }
     }
+
+    .contacts {
+        &__btn-wrap {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+        &__privacy {
+            margin-left: 0;
+            margin-bottom: 20px;
+            order: -1;
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -112,6 +125,17 @@
             padding: 0;
         }
     }
+
+    .contacts {
+        padding-top: 60px;
+        padding-bottom: 50px;
+        &__wrap {
+            grid-template-columns: 280px 1fr;
+        }
+        &__subtitle {
+            font-size: 30px;
+        }
+    }
 }
 
 @media (max-width: 768px) {
@@ -159,7 +183,23 @@
 
     .price {
         &__wrap {
-            grid-template-columns: 50%;
+            grid-template-columns: minmax(auto, 370px);
+            justify-content: center;
+        }
+        &__item {
+            margin-bottom: 20px;
+        }
+    }
+
+    .contacts {
+        padding-top: 40px;
+        &__wrap {
+            grid-template-columns: 1fr;
+            justify-content: center;
+            padding: 0 10px;
+        }
+        &__picture {
+            display: none;
         }
     }
 }
@@ -223,6 +263,26 @@
             grid-template-columns: repeat(auto-fill, minmax(auto, 350px));
             justify-content: center;
             column-gap: 40px;
+        }
+    }
+
+    .price {
+        padding-top: 40px;
+        &__title {
+            margin-bottom: 40px;
+        }
+    }
+
+    .contacts {
+        &__btn-wrap {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__privacy {
+            display: flex;
+            max-width: 180px;
+            align-items: center;
         }
     }
 }
